k8s/services/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: merchant-analytics
  labels:
    name: merchant-analytics
    istio-injection: enabled
spec:
  finalizers:
  - kubernetes
